# TrafficLens

./: .gitignore  README.md  TrafficLens.py  TrafficLens.pyproj  TrafficLens.slnx  app.py  dockerfile  pyproject.toml  requirements.txt
Design/: Diagram.excalidraw
TrafficLensFrontend/: manage.py
TrafficLensFrontend/TrafficLens/: asgi.py  settings.py  urls.py  wsgi.py
TrafficLensFrontend/TrafficLensFrontend/: asgi.py  settings.py  urls.py  wsgi.py
TrafficLensFrontend/main/: actors.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
TrafficLensFrontend/main/templates/: analysis.html  homepage.html
TrafficLensFrontend/main/templates/main/: base_app.html  login.html  (+6 more)
tests/: test_analysis.py
traffic-lens-next-js/: package-lock.json  package.json  tsconfig.json
traffic-lens-next-js/app/: layout.tsx  page.tsx
traffic-lens-next-js/app/TrafficLens/: layout.tsx
traffic-lens-next-js/app/forgot-password/: forgot-password-card.tsx  page.tsx
traffic-lens-next-js/app/login/: login-card.tsx  page.tsx
traffic-lens-next-js/app/signup/: page.tsx  signup-card.tsx
traffic-lens-next-js/db/: client.ts
traffic-lens-next-js/lib/: auth.ts  cookies.ts  jwt.ts  mailer.ts  prisma.ts  validators.ts
trafficlens_core/: __init__.py  analysis.py
trafficlens_wit/: componentize_py_runtime.pyi  componentize_py_types.py  poll_loop.py
trafficlens_wit/componentize_py_async_support/: __init__.py  futures.py  streams.py
trafficlens_wit/wit_world/exports/: __init__.py  incoming_handler.py
trafficlens_wit/wit_world/imports/: outgoing_handler.py  streams.py  types.py
(+12 files in other folders)
